shubara(feat): first implementation of {{#infobox}} and {{#infobox-list}} not complete, but right now it has basic styles for positioning and design. Right now I need to do some heading styles and implement heading images (be stretched to the corners and with a fixed aspect ratio)

--- a/shubara/resources/ext.shubara/ext.shubara.css
+++ b/shubara/resources/ext.shubara/ext.shubara.css
@@ -214,3 +214,45 @@
     height: 70%;
     background-color: var(--color-surface-2);
 }
+
+.ext-shubara-infobox {
+    background-color: var(--color-surface-1);
+    border: 4px solid var(--color-surface-2);
+    border-radius: 12px;
+    float: right;
+    clear: right;
+    margin-left: var(--space-lg);
+    margin-bottom: var(--space-lg);
+    width: 100%;
+    max-width: 400px;
+}
+
+.ext-shubara-infobox summary {
+    color: var(--color-subtle);
+    padding: var(--space-sm);
+}
+
+.ext-shubara-infobox h3 .mw-editsection {
+    display: none;
+}
+
+.ext-shubara-infobox > div {
+    padding: 0 var(--space-sm);
+    padding-bottom: var(--space-sm);
+}
+
+.ext-shubara-infobox-list {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    justify-content: space-evenly;
+    gap: var(--space-sm);
+}
+
+.ext-shubara-infobox-list div div:nth-child(1) {
+    color: var(--color-subtle);
+}
+
+.ext-shubara-infobox-list div div:nth-child(2) {
+    font-size: large;
+    color: var(--color-emphasized);
+}
